--- a/day-01/problem-1/Cargo.toml
+++ b/day-01/problem-1/Cargo.toml
@@ -5,4 +5,8 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[build-dependencies]
+kaze = { path = "../../../kaze/kaze" }
+
 [dependencies]
+kaze = { path = "../../../kaze/kaze" }
